<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_queens_list"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/queens_list" />

        <item
            android:id="@+id/nav_show_timer"
            android:icon="@android:drawable/ic_lock_idle_alarm"
            android:title="@string/show_timer" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/settings" />

        <item
            android:id="@+id/nav_shade_map"
            android:icon="@android:drawable/ic_menu_mapmode"
            android:title="@string/shade_map_title" />

        <item
            android:id="@+id/nav_global_shout"
            android:icon="@android:drawable/ic_dialog_email"
            android:title="@string/global_shout_title" />

    </group>

    <item android:title="@string/actions">
        <menu>
            <item
                android:id="@+id/nav_export"
                android:icon="@android:drawable/ic_menu_save"
                android:title="@string/action_export_shades" />

            <item
                android:id="@+id/nav_notification_test"
                android:icon="@android:drawable/ic_dialog_info"
                android:title="@string/test_notification" />
        </menu>
    </item>

</menu>

