<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auth_register_title"
            android:textStyle="bold"
            android:textSize="22sp"
            android:layout_marginBottom="20dp" />


        <EditText
            android:id="@+id/et_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/auth_username"
            android:inputType="text"
            android:layout_marginBottom="12dp" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/auth_password"
            android:inputType="textPassword"
            android:layout_marginBottom="12dp" />

        <EditText
            android:id="@+id/et_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/auth_confirm_password"
            android:inputType="textPassword"
            android:layout_marginBottom="16dp" />

        <Button
            android:id="@+id/btn_register_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/auth_register"
            android:layout_marginBottom="8dp" />

        <Button
            android:id="@+id/btn_register_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_close"
            android:layout_marginBottom="12dp" />

        <ProgressBar
            android:id="@+id/progress_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />

    </LinearLayout>
</ScrollView>

